[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "terabot"
version = "0.1.0"
description = "Flask-based API and CLI to extract file info and direct links from TeraBox share URLs."
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "saahiyo" }]
license = { text = "Proprietary" }


# Runtime dependencies used by the app (aiohttp client timeout configured in code)

dependencies = [
  "Flask>=2.2,<4",
  "aiohttp>=3.8,<4",
  "requests>=2.31,<3",
]


[project.urls]

Homepage = "https://example.com"

Repository = "https://example.com/repo"
Documentation = "https://example.com/docs/terabot"



[project.optional-dependencies]
dev = [
  "hypercorn>=0.14",
  "waitress>=2.1",
]
# Optional CORS support for browser clients
cors = [
  "Flask-Cors>=4,<5",
]
